# PAOO_lab1

./: README.md  config.bat
src/: CMakeLists.txt  main.cpp
src/car/: CMakeLists.txt  car.cpp  car.h
src/engine/: CMakeLists.txt  engine.cpp  engine.h
src/militarycar/: CMakeLists.txt  militarycar.cpp  militarycar.h
src/truck/: CMakeLists.txt  truck.cpp  truck.h
src/vehicle/: CMakeLists.txt  vehicle.cpp  vehicle.h
